tests/machine/x/hs/string_contains.error

/workspace/mochi/tests/machine/x/hs/string_contains.hs:109:62: error:
    • Couldn't match type: [Char]
                     with: Map.Map String (String -> a0)
      Expected: Map.Map String (String -> a0)
        Actual: String
    • In the second argument of ‘Map.lookup’, namely ‘(s)’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "contains" (s))’
      In the first argument of ‘print’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "contains" (s)) "cat")’
    |
109 |   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "cat")
    |                                                              ^

/workspace/mochi/tests/machine/x/hs/string_contains.hs:110:62: error:
    • Couldn't match type: [Char]
                     with: Map.Map String (String -> a1)
      Expected: Map.Map String (String -> a1)
        Actual: String
    • In the second argument of ‘Map.lookup’, namely ‘(s)’
      In the second argument of ‘fromMaybe’, namely
        ‘(Map.lookup "contains" (s))’
      In the first argument of ‘print’, namely
        ‘(fromMaybe (error "missing") (Map.lookup "contains" (s)) "dog")’
    |
110 |   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "dog")
    |                                                              ^


Context around line 109:
  107| main :: IO ()
  108| main = do
  109|   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "cat")
  110|   print (fromMaybe (error "missing") (Map.lookup "contains" (s)) "dog")
  111| 
